--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.5",
+    "classnames": "^2.5.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-typed": "^1.2.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
