--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.3.1"
+django-crontab = "^0.7.1"
 
 
 [build-system]
