--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.3.1"
 django-crontab = "^0.7.1"
+setuptools = "^69.1.1"
+requests = "^2.31.0"
 
 
 [build-system]
