--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,5 +8,6 @@ RUN poetry config virtualenvs.create false
 COPY poetry.lock pyproject.toml ./
 RUN poetry install --no-interaction --no-ansi -vvv
 COPY . ./
+EXPOSE 8000
 
 CMD ["python", "/app/src/manage.py", "runserver", "0.0.0.0:8000"]
